docs/api/qiskit/0.39/qiskit.transpiler.passes.OptimizeCliffords.md
---
title: OptimizeCliffords
description: API reference for qiskit.transpiler.passes.OptimizeCliffords
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.OptimizeCliffords
---

# OptimizeCliffords

<span id="qiskit.transpiler.passes.OptimizeCliffords" />

`OptimizeCliffords(*args, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/optimization/optimize_cliffords.py "view source code")

Bases: [`qiskit.transpiler.basepasses.TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

Combine consecutive Cliffords over the same qubits. This serves as an example of extra capabilities enabled by storing Cliffords natively on the circuit.

## Methods

### name

<span id="qiskit.transpiler.passes.OptimizeCliffords.name" />

`OptimizeCliffords.name()`

Return the name of the pass.

### run

<span id="qiskit.transpiler.passes.OptimizeCliffords.run" />

`OptimizeCliffords.run(dag)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/optimization/optimize_cliffords.py "view source code")

Run the OptimizeCliffords pass on dag.

**Parameters**

**dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

**Returns**

the optimized DAG.

**Return type**

[DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

## Attributes

<span id="qiskit.transpiler.passes.OptimizeCliffords.is_analysis_pass" />

### is\_analysis\_pass

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

<span id="qiskit.transpiler.passes.OptimizeCliffords.is_transformation_pass" />

### is\_transformation\_pass

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

